update to current gradle version and add a test